--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/json2csv": "^5.0.7",
     "@types/node": "^18.18.0",
+    "@types/nodemailer": "^6.4.17",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
