--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nebular/date-fns": "^15.0.0",
     "@nebular/eva-icons": "^15.0.0",
     "@nebular/theme": "^15.0.0",
+    "@primeng/themes": "^19.1.3",
     "axios": "^1.9.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.5.0",
@@ -34,7 +35,10 @@
     "mongoose": "^8.14.2",
     "ngx-mask": "^19.0.6",
     "nodemailer": "^7.0.3",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
+    "tailwindcss-primeui": "^0.5.1",
     "tslib": "^2.3.0",
     "vitest": "^3.1.3",
     "zone.js": "~0.15.0"
@@ -54,6 +58,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2"
   }
 }
